--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,3 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"],
-
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "semi": false,
-  "tailwindCSS.wrapAttributes": true,
-  "tailwindCSS.sortByGroup": true,
-  "tailwindCSS.classNames.singleLine": true
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
